added description and ingredients for the recipe for plantian porrdige :)

--- a/recipes/plantain_porridge.html
+++ b/recipes/plantain_porridge.html
@@ -7,6 +7,42 @@
 </head>
 <body>
     <h1>Plaintain Porridge</h1>
+    <br>
     <a href="../index.html">Home</a>
+    <br>
+    <img src="../images/plaintainporridge.jpg"height="310" width="310">
+    <h3>Description</h3>
+<p>Plantain porridge and mashed plantain 
+    recipes are quite popular within the West African region. 
+    However, as with most recipes, these vary between countries and 
+    individuals. For example, there is sese plantain or 
+    turning plantain in Cameroon. Ghanaians have their mashed plantain called “eto”,
+     and in Nigeria there is Nigerian plantain porridge.</p>
+
+     <h3>Ingrediaents</h3>
+<ul>
+    <li>Green Plantain</li>
+    <li>Red Palm Oil</li>
+    <li>Onion</li>
+    <li>Garlic</li>
+    <li>Ginger powder</li>
+    <li>Onion Powder</li>
+    <li>Ground crayfish</li>
+    <li>Pepper mix</li>
+    <li>Salt</li>
+    <li>Mixed Seafood</li>
+    <li>Kale</li>
+</ul>
+<h3>Steps</h3>
+<ol>
+<li>Peel the plantain and cut into smaller pieces.</li> 
+<li>Chop the onion. Finely chop the garlic.</li>
+<li>Heat the palm oil in a pan until it melts. Do not allow to bleach. </li>
+<li>Add the onions. Allow to cook for around 5 mins.</li>
+<li>Pour in the garlic, onion powder, ginger powder, ground crayfish and the blended pepper mixture with some salt. Add 2 cups of water and cover the pan.</li>
+<li>Allow to cook for 15 mins. </li>
+<li>Wash the kale. Remove the thick stalk in the middle and slice thinly.</li>
+<li>Mix in the kale and the seafood. Reduce the heat and allow to cook for further 5 mins. Remove from heat</li>
+</ol>
 </body>
 </html>
