finished off egusi and jollof,v hungry

--- a/recipes/jollof.html
+++ b/recipes/jollof.html
@@ -1,2 +1,48 @@
-Orange pop, spicy flavor, what more can you ask for? Jollof
-        rice out any dish your making. Most likely the evolution of rice. 
+
+        <!DOCTYPE html>
+        <html lang="en">
+        <head>
+            <meta charset="UTF-8">
+            <meta name="viewport" content="width=device-width, initial-scale=1.0">
+            <title>Jollof Rice Recipe</title>
+        </head>
+        <body>
+            <h1>Jollof Rice</h1>
+            <br>
+            <a href="../index.html">Home</a>
+            <br>
+            <img src="../images/jollof.jpg"height="310" width="310">
+            <br> 
+            <br>
+            <h2>Description</h2>
+            <p>Orange pop, spicy flavor, what more can you ask for? Jollof rice rounds out any dish you're making. Most likely the evolution of rice. </p>
+            <br>
+            <br>
+            <h2>Ingredients</h2>
+            <ul>
+<li>Red bell pepper:</li>
+<li>Vine tomatoes</li>
+<li>Red onion</li>
+<li>Red scotch bonnet chillies</li>
+<li>Garlic</li>
+<li>Fresh ginger</li>
+<li>Vegetable oil</li>
+<li>Double concentrated tomato purée (DeRica)</li>
+<li>Curry powder</li>
+<li>Dried thyme</li>
+<li>Chicken stock cubes</li>
+<li>Dried bay leaves</li>
+<li>White basmati rice</li>
+               
+            </ul>
+            <h2>Steps</h2>
+            <ol>
+<li>Place the base ingredients in a blender and blitz until smooth.</li>
+<li>Heat the vegetable oil in a large Dutch oven set over a medium heat. Add the onion and cook, stirring occasionally, for 3 minutes, then add the tomato purée and cook, stirring frequently, until it begins to darken, 3 to 5 minutes.</li>
+<li>Pour in the blended base, stir to combine and bring to a simmer. Reduce the heat to medium-low and partially cover the pot with the lid – it will splatter! Cook, stirring occasionally, until the sauce is reduced by about a third of its original volume and the oil begins to separate from the sauce, 12 to 15 minutes.</li>
+<li>Stir in the curry powder, thyme, stock cubes, bay leaves and water. Season generously with salt and pepper, to taste, then cover and bring to a boil over medium-high heat.</li>
+<li>Meanwhile, rinse the rice thoroughly with cold water until the water runs clean, then drain. Add the rice to the sauce and stir to combine. As soon as it comes to a boil, reduce the heat to low, cover the pot and cook for 25 minutes.</li>
+                <li>By this point, the rice should have absorbed all the liquid and be cooked through. Remove the bay leaves, give the rice a stir and you’re ready to serve, preferably with grilled chicken and fried plantain.</li>
+            </ol>
+        </body>
+        </html>
