--- a/recipes/plantain_porridge.html
+++ b/recipes/plantain_porridge.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Plantain Porridge Recipe</title>
 </head>
 <body>
     <h1>Plaintain Porridge</h1>
@@ -19,7 +19,7 @@
     turning plantain in Cameroon. Ghanaians have their mashed plantain called “eto”,
      and in Nigeria there is Nigerian plantain porridge.</p>
 
-     <h3>Ingrediaents</h3>
+     <h3>Ingredients</h3>
 <ul>
     <li>Green Plantain</li>
     <li>Red Palm Oil</li>
