--- a/recipes/egusi.html
+++ b/recipes/egusi.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Egusi Stew Recipe</title>
 </head>
 <body>
     <h1>Egusi Stew</h1>
@@ -16,5 +16,35 @@
     <h2>Description</h2>
     <p>Egusi stew is the best of both worlds. Nutirious and delicious. My preferred way to eat is with eba, which is cassava grain turned into a slightly sweet thick paste, and mixed with smoked turkey and some malt drink on the side. 
     </p>
+    <br>
+    <br>
+    <h2>Ingredients</h2>
+    <ul>
+<li>Egusi melon</li>
+<li>palm oil</li>
+<li>crayfish</li>
+<li>locust bean</li>
+<li>chopped spinach</li>
+<li>bell pepper</li>
+<li>haberno pepper</li>
+<li>fresno pepper</li>
+<li>onions</li>
+<li>stock cube</li>
+<li>beef</li>
+<li>salt</li>
+<li>beef stock</li>
+    </ul>
+<h2>Steps</h2>
+<ol>
+<li>Blend the peppers and onions together until smooth and set aside.</li>
+<li>Blend the Egusi melon, half of the second onion, and crayfish together. Set aside as well.</li>
+<li>Heat the palm oil in a pan and allow it to melt over medium heat but don't overheat the oil. Add the remaining half onion (diced) and half of the locust bean. Let it cook for about 3 minutes on medium heat.</li>
+<li>Add the blended pepper and cook till the water is reduced this should take about 15 minutes on medium heat stirring about every 5 minutes to prevent burning.</li>
+<li>Add the remaining locust bean, beef stock, and salt to taste. Cover and leave to cook for another 5 minutes</li>
+<li>Gently introduce the blended egusi inside the sauce but don't stir it at this point. Just cover it and leave it to cook for about 20 to 30 minutes Keep an eye on it so it doesn't burn but try not to stir it until the Egusi turns into a soft compact mass. Then, gently stir together and add more stock or water if necessary.</li>
+<li>Add the fish and meat and leave to cook again for another 5 minutes.</li>
+<li>Stir in the spinach and leave to simmer for about 5 minutes (stir constantly).  Adjust the seasoning if necessary. </li>
+<li>Serve while still hot.</li>
+</ol>
 </body>
 </html>
