--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Odin Recipes</h1>
     <a href="recipes/plantain_porridge.html">Plantain Porridge</a>
-   
+    <a href="recipes/jollof.html">Jollof Rice</a>
+    <a href="recipes/egusi.html">Egusi</a>
 </body>
 
 </html>
